--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <h2>Roles</h2>
     <div class="roles">
-        Aadivia - President <br>
+        Aadivya - President <br>
         Arjun Anand Nair - Vice President <br>
         Idhant - Assistant <br>
         Amshuman - Moderator <br>
@@ -56,7 +56,7 @@
     <h2>Rules</h2>
     <div class="rules">
         <p>
-            1. No swearing — This Community is Eco-friendly <br>
+            1. No swearing — This Community is friendly <br>
             2. No messing around the server and server channels — This action can be kick or ban-able based on the mess you did <br>
             3. No commotion; fighting physically or verbally will not be tolerated <br>
             4. Citizens and civilians have rights to report any misbehaving Vice President and Ministers — Reports will go to the President for a court order <br>
@@ -69,17 +69,16 @@
     <h2>How to Join The Great Community</h2>
     <p>
         There are two ways to join The Great Community: <br><br>
-        First way: Download/open Discord, sign up/login, then if you are in JSS INTERNATIONAL SCHOOL, you can come to the 7-F classroom and meet Aadivia (President) or meet Advik Pandey (Coder), and they will guide you through the process. <br><br>
-        Second way: Download/open Discord, sign up/login, then on Discord, you can send a friend request to the ID: <strong>aadivyathegreat_39693</strong> or to the ID: <strong>advikvif</strong> (formerly known as Aadivia - President and Advik Pandey - Coder). You can tell them your information, and they will send you an invite link to join.
+        First way: Download/open Discord, sign up/login, then if you are in JSS INTERNATIONAL SCHOOL, you can come to the 7-F classroom and meet Aadivya (President) or meet Idhant (Assistant), and they will guide you through the process. <br><br>
+        Second way: Download/open Discord, sign up/login, then on Discord, you can send a friend request to the ID: <strong>aadivyathegreat_39693</strong> or to the ID: <strong>idli_the_good_09690</strong> (formerly known as Aadivia - President and Idhant - Assistant). You can tell them your information, and they will send you an invite link to join.
     </p>
 
     <h2>Contact</h2>
     <p>
-        Communicate: <strong>aadivyathegreat_39693</strong> (Aadivia- President) & <strong>advikvif</strong> (Advik Pandey - Coder)
+        Communicate: <strong>aadivyathegreat_39693</strong> (Aadivia- President) & <strong>idli_the_good_09690</strong> (Idhant- Assistant)
     </p>
 
-    <h3>The Great Community: Since 2022</h3>
-    <p>Written by: <strong>Advik Pandey (Coder)</strong></p>
-
+    <h3>The Great Community: Since 2023</h3>
+   
 </body>
 </html>
