--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             font-family: "nunito";
             font-weight: bold;
             }
-        .roles {
+        .members {
             font-family: "nunito";
             font-weight: bold;
         }
@@ -66,7 +66,7 @@
     </div>
 
     <div class="roles">
-    <h2>Roles</h2>
+    <h2>Members</h2>
     <centre>
         Arjun Anand Nair - Vice President <br>
         Idhant - Assistant <br>
@@ -114,3 +114,4 @@
 </body>
 
 </html>
+
