--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <p>Hi and Welcome to The Great Community. We are thrilled to tell you about our community! As you are on this site, I will guide you through our roles, rules, and how to join our community. Let's begin!</p>
     </div>
 
-    <div class="roles">
+    <div class="members">
     <h2>Members</h2>
     <centre>
         Arjun Anand Nair - Vice President <br>
@@ -114,4 +114,5 @@
 </body>
 
 </html>
+
 
