--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <h2>How to Join The Great Community</h2>
     <p>
         There are two ways to join The Great Community: <br><br>
-        First way: Download/open Discord, sign up/login, then if you are in JSS INTERNATIONAL SCHOOL, you can come to the 7-F classroom and meet Aadivya (President) or meet Idhant (Assistant), and they will guide you through the process. <br><br>
+        First way: Download/open Discord, sign up/login, then if you are in JSS INTERNATIONAL SCHOOL, you can come to the 7-E classroom and meet Aadivya (President) or meet Idhant (Assistant), and they will guide you through the process. <br><br>
         Second way: Download/open Discord, sign up/login, then on Discord, you can send a friend request to the ID: <strong>aadivyathegreat_39693</strong> or to the ID: <strong>idli_the_good_09690</strong> (formerly known as Aadivia - President and Idhant - Assistant). You can tell them your information, and they will send you an invite link to join.
     </p>
 </div>
@@ -114,5 +114,6 @@
 </body>
 
 </html>
+
 
 
