--- a/index.html
+++ b/index.html
@@ -92,6 +92,36 @@
        
     </div>
 
+    <div class="events">
+    <h2>Upcoming Events</h2>
+    <table border="1" cellpadding="10" cellspacing="0" style="width:100%; border-collapse: collapse; font-family: 'Nunito';">
+        <thead>
+            <tr style="background-color: lightgray;">
+                <th>Event Number</th>
+                <th>Time (From - To)</th>
+                <th>Use / Purpose of Event</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>10:00 AM - 12:00 PM</td>
+                <td>Community Meeting</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>01:00 PM - 02:00 PM</td>
+                <td>Workshop: Coding Basics</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>03:00 PM - 04:00 PM</td>
+                <td>Discussion: Upcoming Projects</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
     <div class="Joining">
     <h2>How to Join The Great Community</h2>
     <p>
@@ -114,6 +144,7 @@
 </body>
 
 </html>
+
 
 
 
