--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             top: 0;
             width: 200px; /* Adjust size as needed */
         }
+        .events {
+            font-family: "nunito"
+            font weight: bold;
+        }
         .Joining {
             font-family: "nunito";
             font-weight: bold;
@@ -93,7 +97,7 @@
     </div>
 
     <div class="events">
-    <h2>Upcoming Events</h2>
+    <h2>Ongoing Events</h2>
     <table border="1" cellpadding="10" cellspacing="0" style="width:100%; border-collapse: collapse; font-family: 'Nunito';">
         <thead>
             <tr style="background-color: lightgray;">
@@ -144,6 +148,7 @@
 </body>
 
 </html>
+
 
 
 
