--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
     <table border="1" cellpadding="10" cellspacing="0" style="width:100%; border-collapse: collapse; font-family: 'Nunito';">
         <thead>
             <tr style="background-color: lightgray;">
-                <th>Event Number</th>
-                <th>Time (From - To)</th>
-                <th>Use / Purpose of Event</th>
+                <br>Event Number</br>
+                <br>Time (From - To)</br>
+                <br>Use / Purpose of Event</br>
             </tr>
         </thead>
         <tbody>
@@ -148,6 +148,7 @@
 </body>
 
 </html>
+
 
 
 
