--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
     <h2>Ongoing Events</h2>
     <table border="1" cellpadding="10" cellspacing="0" style="width:100%; border-collapse: collapse; font-family: 'Nunito';">
         <thead>
-            <br style="background-color: lightgray;">
-                <br>Event Number</br>
-                <br>Time (From - To)</br>
-                <br>Use / Purpose of Event</br>
-            </br>
+            <tr style="background-color: lightgray;">
+                <th>Event Number</th>
+                <th>Time (From - To)</th>
+                <th>Use / Purpose of Event</th>
+            </tr>
         </thead>
         <tbody>
-            <br>
+            <tr>
                 <td>1</td>
                 <td>10:00 AM - 12:00 PM</td>
                 <td>Community Meeting</td>
@@ -148,6 +148,7 @@
 </body>
 
 </html>
+
 
 
 
