--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
     <table border="1" cellpadding="10" cellspacing="0" style="width:100%; border-collapse: collapse; font-family: 'Nunito';">
         <thead>
             <tr style="background-color: lightgray;">
-                <th>Event Number</th>
-                <th>Time (From - To)</th>
+                <th></th>Event Number</th>
+                <th>Time</th>
                 <th>Use / Purpose of Event</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>1</td>
+                1<br>
                 <td>10:00 AM - 12:00 PM</td>
                 <td>Community Meeting</td>
             </tr>
@@ -148,6 +148,7 @@
 </body>
 
 </html>
+
 
 
 
