--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <table border="1" cellpadding="10" cellspacing="0" style="width:100%; border-collapse: collapse; font-family: 'Nunito';">
         <thead>
             <tr style="background-color: lightgray;">
-                <th></th>Event Number</th>
+                <th>Event Number</th>
                 <th>Time</th>
                 <th>Use / Purpose of Event</th>
             </tr>
@@ -148,6 +148,7 @@
 </body>
 
 </html>
+
 
 
 
