--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
     <div class="rules">
     <h2>Rules</h2>
+        <img src="picture.jpg" alt="community image">
         <p>
             1. No swearing — This Community is friendly <br>
             2. No messing around the server and server channels — This action can be kick or ban-able based on the mess you did <br>
@@ -148,6 +149,7 @@
 </body>
 
 </html>
+
 
 
 
