--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             position: relative;
             font-weight: bold;
         }
-        .rules img {
+        .picture.jpg {
             font-family: "nunito";
             font-weight: bold;
             position: absolute;
@@ -72,7 +72,7 @@
     <div class="members">
     <h2>Members</h2>
         <img src="picture.jpg" alt="community image">
-    <p>
+    <centre>
         Arjun Anand Nair - Vice President <br>
         Idhant - Assistant <br>
         Amshuman - Moderator <br>
@@ -150,6 +150,7 @@
 </body>
 
 </html>
+
 
 
 
