--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
         .members {
             font-family: "nunito";
             font-weight: bold;
-        }
+            }
+        .picture.jpg {
+            font-family: "nunito";
+            font-weight: bold;
+            position: right;
+            right: 0;
+            top: 0;
+            width: 200px;
+            }
         .rules {
             font-family: "nunito";
             position: relative;
             font-weight: bold;
-        }
-        .picture.jpg {
-            font-family: "nunito";
-            font-weight: bold;
-            position: absolute;
-            right: 0;
-            top: 0;
-            width: 200px; /* Adjust size as needed */
-        }
+            }
         .events {
             font-family: "nunito"
             font weight: bold;
@@ -150,6 +150,7 @@
 </body>
 
 </html>
+
 
 
 
