--- a/index.html
+++ b/index.html
@@ -29,13 +29,11 @@
             font-family: "nunito";
             font-weight: bold;
             }
-        .picture.jpg {
-            font-family: "nunito";
-            font-weight: bold;
-            position: right;
-            right: 0;
-            top: 0;
-            width: 200px;
+        .community-image {
+            float: right;
+            width: 150px;
+            margin-left: 20px;
+            border-radius: 10px;
             }
         .rules {
             font-family: "nunito";
@@ -71,7 +69,7 @@
 
     <div class="members">
     <h2>Members</h2>
-        <img src="picture.jpg" alt="community image">
+        <img src="picture.jpg" alt="community image" class="community-image">
     <centre>
         Arjun Anand Nair - Vice President <br>
         Idhant - Assistant <br>
@@ -150,6 +148,7 @@
 </body>
 
 </html>
+
 
 
 
