--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div class="members">
     <h2>Members</h2>
-        <img src="TGC.jpg" alt="community image" class="community-image">
+        <img src="picture.jpg" alt="community image" class="community-image">
     <centre>
         Arjun Anand Nair - Vice President <br>
         Idhant - Assistant <br>
@@ -148,6 +148,7 @@
 </body>
 
 </html>
+
 
 
 
