--- a/index.html
+++ b/index.html
@@ -71,10 +71,13 @@
     <h2>Members</h2>
         <img src="picture.jpg" alt="community image" class="community-image">
     <centre>
+        Aadivya - President <br>
         Arjun Anand Nair - Vice President <br>
         Idhant - Assistant <br>
+        Aahil - Supreme Court Judge <br>
         Amshuman - Moderator <br>
         Nestor - Civilian <br>
+        Ansh - Civillian <br>
         Wayeez - Coder <br>
         Ziya - Civilian <br>
         Zuhayr - Civilian <br>
@@ -148,6 +151,7 @@
 </body>
 
 </html>
+
 
 
 
