--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         Wayeez - Coder <br>
         Ziya - Civilian <br>
         Zuhayr - Civilian <br>
+        Kiruthika - Event Manager <br>
         Advik - Coder <br>
     </div>
     </centre>
@@ -151,6 +152,7 @@
 </body>
 
 </html>
+
 
 
 
