--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
             margin-left: 20px;
             border-radius: 10px;
             }
+        .community-video {
+            dispay: block;
+            margin-top: 10px;
+            border-radius: 10px;
+            width: 200px;
+            float: right;
+            }
         .rules {
             font-family: "nunito";
             position: relative;
@@ -70,6 +77,9 @@
     <div class="members">
     <h2>Members</h2>
         <img src="picture.jpg" alt="community image" class="community-image">
+        <video class="community-video" autoplay muted loop playsinline>
+            <source src="tgc.mp4" type="video/mp4">
+        </video>
     <centre>
         Aadivya - President <br>
         Arjun Anand Nair - Vice President <br>
@@ -152,6 +162,7 @@
 </body>
 
 </html>
+
 
 
 
