--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             }
         .community-image {
             float: right;
-            width: 200px;
+            width: 300px;
             margin-left: 20px;
             border-radius: 10px;
+            height:auto;
+            object-fit:cover;
             }
         .community-video {
             dispay: block;
@@ -162,6 +164,7 @@
 </body>
 
 </html>
+
 
 
 
