--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -80,7 +81,7 @@
     <h2>Members</h2>
         <img src="picture.jpg" alt="community image" class="community-image">
         <video class="community-video" autoplay muted loop playsinline>
-            <source src="tgc.mp4" type="video/mp4">
+            <source src="?.mp4" type="video/mp4">
         </video>
     <centre>
         Aadivya - President <br>
@@ -164,6 +165,7 @@
 </body>
 
 </html>
+
 
 
 
