--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <h2>Members</h2>
         <img src="picture.jpg" alt="community image" class="community-image">
         <video class="community-video" autoplay muted loop playsinline>
-            <source src="?.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
         </video>
     <centre>
         Aadivya - President <br>
@@ -165,6 +165,7 @@
 </body>
 
 </html>
+
 
 
 
