--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <centre>
         Aadivya - President <br>
         Arjun Anand Nair - Vice President <br>
-        Idhant - Assistent of Vice President <br>
+        Idhant - Assistant of Vice President <br>
         Aahil - Supreme Court Judge <br>
         Amshuman - Moderator <br>
         Nestor - Civilian <br>
@@ -165,6 +165,7 @@
 </body>
 
 </html>
+
 
 
 
