--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
         Amshuman - Moderator <br>
         Nestor - Civilian <br>
         Ansh - Civillian <br>
-        Wayeez - Coder <br>
+        Wayeez - Website Manager <br>
         Ziya - Civilian <br>
         Zuhayr - Civilian <br>
         Kiruthika - Event Manager <br>
-        Advik - Coder <br>
+        Advik - Website Manager <br>
     </div>
     </centre>
 
@@ -165,6 +165,7 @@
 </body>
 
 </html>
+
 
 
 
