--- a/index.html
+++ b/index.html
@@ -125,19 +125,19 @@
         </thead>
         <tbody>
             <tr>
-                <td>1</td>
-                <td>10:00 AM - 12:00 PM</td>
-                <td>Community Meeting</td>
+                <td>1. test</td>
+                <td>N-A</td>
+                <td>N-A</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>01:00 PM - 02:00 PM</td>
-                <td>Workshop: Coding Basics</td>
+                <td>N-A</td>
+                <td>N-A</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>03:00 PM - 04:00 PM</td>
-                <td>Discussion: Upcoming Projects</td>
+                <td>N-A</td>
+                <td>N-A</td>
             </tr>
         </tbody>
     </table>
@@ -165,6 +165,7 @@
 </body>
 
 </html>
+
 
 
 
