--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
             font-weight: bold;
             }
         .events {
-            font-family: "nunito"
+            font-family: "nunito";
             font-weight: bold;
             }
         .purpose {
-            font-family: "nunito"
+            font-family: "nunito";
             font-weight: bold;
-        }
+            }
         .Joining {
             font-family: "nunito";
             font-weight: bold;
-        }
+            }
         .Contact {
         font-family: "nunito";
         font-weight: bold;
-        }
+            }
         .Founded {
         font-family: "nunito";
         font-weight: bold;
-        }
+            }
         
     </style>
 </head>
@@ -129,7 +129,7 @@
         </thead>
         <tbody>
             <tr>
-                <td><h3>1. N-A</h3></td>
+                <td>1. N-A</td>
                 <td>N-A</td>
                 <td>N-A</td>
             </tr>
@@ -150,7 +150,7 @@
         <div class="purpose">
     <h2>Our Purpose</h2>
     <p>
-        <h3>The Great Community is a place with the sole purpose of peace, kindness, politeness, and other qualities. It allows its citizens to work for money, they can showcase their art, trade goods, go on adventures with pepe the frog (Dank Memer), they also have competitions for rewards in the form of The Great Currency. The citizens pay taxes to pay respect to The Community and being grateful for what they have been given. They can get money buy working as dank Memer mods, babysitters, chefs, and cooks to working as doctors, scientists, and professors. The President and Vice President may change every year or based on the situation. We also have our own constitution given in the "#welcome-and-rules" section of the community.</h3>
+        The Great Community is a place with the sole purpose of peace, kindness, politeness, and other qualities. It allows its citizens to work for money, they can showcase their art, trade goods, go on adventures with pepe the frog (Dank Memer), they also have competitions for rewards in the form of The Great Currency. The citizens pay taxes to pay respect to The Community and being grateful for what they have been given. They can get money buy working as dank Memer mods, babysitters, chefs, and cooks to working as doctors, scientists, and professors. The President and Vice President may change every year or based on the situation. We also have our own constitution given in the "#welcome-and-rules" section of the community.
     </p>
 </div>
     
@@ -176,6 +176,7 @@
 </body>
 
 </html>
+
 
 
 
