--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <style>
         body {
-            background: linear-gradient(skyblue,lightgreen, rgb(200, 240, 105));
+            background--image:url("bg.jpg");
             background-repeat: no-repeat;
             background-attachment:fixed;
             background-color: white;
@@ -176,6 +176,7 @@
 </body>
 
 </html>
+
 
 
 
