--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <style>
         body {
-            background--image:url("https://github.com/Advik204/The-Great-Community/blob/main/bg.jpg");
+            background-image:url("https://raw.githubusercontent.com/Advik204/The-Great-Community/main/bg.jpg");
             background-repeat: no-repeat;
             background-attachment:fixed;
             border: 5px solid;
@@ -175,6 +175,7 @@
 </body>
 
 </html>
+
 
 
 
