--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <style>
         body {
+            margin:0;
             background-image:url("https://raw.githubusercontent.com/Advik204/The-Great-Community/main/bgn.jpg");
+            background-size:cover;
             background-repeat: no-repeat;
             background-attachment:fixed;
-            border: 5px solid;
-            padding: 20px;
-            border-radius: 10px;
-            border-color: gray;
+            bacground-position:center;
         }
         h1 {
             color: black;
@@ -175,6 +174,7 @@
 </body>
 
 </html>
+
 
 
 
