--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             background-repeat: no-repeat;
             background-attachment:fixed;
             bacground-position:center;
+            border: 5px solid;
+            padding: 20px;
+            border-radius: 10px
+            border-color: red;
         }
         h1 {
             color: black;
@@ -174,6 +178,7 @@
 </body>
 
 </html>
+
 
 
 
