--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             bacground-position:center;
             border: 5px solid;
             padding: 20px;
-            border-radius: 10px
+            border-radius: 10px;
             border-color: red;
         }
         h1 {
-            color: black;
+            color: red;
             text-align: center;
             font-family: "Nunito";
             }
@@ -178,6 +178,7 @@
 </body>
 
 </html>
+
 
 
 
