--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <style>
         body {
-            margin:0;
             background-image:url("https://raw.githubusercontent.com/Advik204/The-Great-Community/main/bgn.jpg");
             background-size:cover;
             background-repeat: no-repeat;
@@ -20,11 +19,12 @@
             border-color: red;
         }
         h1 {
-            color: red;
+            color: white;
             text-align: center;
             font-family: "Nunito";
             }
             .welcome {
+            color: white;
             font-family: "nunito";
             font-weight: bold;
             }
@@ -178,6 +178,7 @@
 </body>
 
 </html>
+
 
 
 
