--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             border: 5px solid;
             padding: 20px;
             border-radius: 10px;
-            border-color: red;
+            border-color: gray;
         }
         h1 {
             color: white;
@@ -29,6 +29,7 @@
             font-weight: bold;
             }
         .members {
+            color: white;
             font-family: "nunito";
             font-weight: bold;
             }
@@ -48,27 +49,33 @@
             object-fit:cover;
             }
         .rules {
+            color: white;
             font-family: "nunito";
             position: relative;
             font-weight: bold;
             }
         .events {
+            color: white;
             font-family: "nunito";
             font-weight: bold;
             }
         .purpose {
+            color: white;
             font-family: "nunito";
             font-weight: bold;
             }
         .Joining {
+            color: white;
             font-family: "nunito";
             font-weight: bold;
             }
         .Contact {
+        color: white;
         font-family: "nunito";
         font-weight: bold;
             }
         .Founded {
+        color: white;
         font-family: "nunito";
         font-weight: bold;
             }
@@ -178,6 +185,7 @@
 </body>
 
 </html>
+
 
 
 
