--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             object-fit:cover;
             }
         .rules {
-            color: white;
+            color: black;
             font-family: "nunito";
             position: relative;
             font-weight: bold;
@@ -185,6 +185,7 @@
 </body>
 
 </html>
+
 
 
 
